connected components ok

--- a/cfg/gngt.cfg
+++ b/cfg/gngt.cfg
@@ -7,4 +7,10 @@ gen = ParameterGenerator()
 
 
 gen.add("threshold", int_t, 0, "Input image threshold", 127, 0, 255)
+gen.add("nb_epochs", int_t, 0, "Nb of epochs per frame", 1, 1, 50)
+gen.add("target", double_t, 0, "Target (GNG-T)", 1, 0, 50)
+gen.add("max_samples", int_t, 0, "Maximal number of samples considered", 1000, 100, 10000)
+gen.add("max_dist", double_t, 0, "Maximal edge length within a component", 0.1, 0, 1)
+
+
 exit(gen.generate(PACKAGE, "vqimg", "GngtParam"))
