--- a/package.xml
+++ b/package.xml
@@ -25,6 +25,7 @@
   <run_depend>image_transport</run_depend>
   <run_depend>opencv2</run_depend>
   <run_depend>cv_bridge</run_depend>
+  <run_depend>message_runtime</run_depend>
   
 
   <!-- The export tag contains other, unspecified, tags -->
