--- a/cfg/gngt.cfg
+++ b/cfg/gngt.cfg
@@ -9,6 +9,14 @@ gen = ParameterGenerator()
 gen.add("threshold", int_t, 0, "Input image threshold", 127, 0, 255)
 gen.add("nb_epochs", int_t, 0, "Nb of epochs per frame", 1, 1, 50)
 gen.add("target", double_t, 0, "Target (GNG-T)", 1, 0, 50)
+
+evol_enum = gen.enum([ gen.const("raw",      int_t, 0, "average based evolution (basic, quite unstable)"),
+                       gen.const("sci",      int_t, 1, "smallest confidence interval based evolution (more stable)")],
+                     "Select the kind of evolution for adjusting the graph size.")
+
+gen.add("evolution_algo", int_t, 0, "Select the kind of evolution for adjusting the graph size.", 0, 0, 1, edit_method=evol_enum)
+
+
 gen.add("max_samples", int_t, 0, "Maximal number of samples considered", 1000, 100, 10000)
 gen.add("max_dist", double_t, 0, "Maximal edge length within a component", 0.1, 0, 1)
 
