--- a/params/webcam-demo-gngt.yaml
+++ b/params/webcam-demo-gngt.yaml
@@ -1,7 +1,9 @@
 !!python/object/new:dynamic_reconfigure.encoding.Config
 dictitems:
+  evolution_algo: 1
   groups: !!python/object/new:dynamic_reconfigure.encoding.Config
     dictitems:
+      evolution_algo: 1
       groups: !!python/object/new:dynamic_reconfigure.encoding.Config
         state: []
       id: 0
